--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,35 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>App</title>
+    <title>ASMR.SH</title>
   </head>
-  <body>
+<link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css"  rel="stylesheet" type="text/css">
+<link href="https://fonts.googleapis.com/css?family=Euphoria+Script|Taviraj|Trirong" rel="stylesheet">
+
+<link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
+<style type="text/css">
+.container{
+  background: -moz-radial-gradient(center, ellipse cover, rgba(35,9,74,1) 0%, rgba(0,0,0,1) 100%); /* ff3.6+ */
+background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%, rgba(35,9,74,1)), color-stop(100%, rgba(0,0,0,1))); /* safari4+,chrome */
+background:-webkit-radial-gradient(center, ellipse cover, rgba(35,9,74,1) 0%, rgba(0,0,0,1) 100%); /* safari5.1+,chrome10+ */
+background: -o-radial-gradient(center, ellipse cover, rgba(35,9,74,1) 0%, rgba(0,0,0,1) 100%); /* opera 11.10+ */
+background: -ms-radial-gradient(center, ellipse cover, rgba(35,9,74,1) 0%, rgba(0,0,0,1) 100%); /* ie10+ */
+background:radial-gradient(ellipse at center, rgba(35,9,74,1) 0%, rgba(0,0,0,1) 100%); /* w3c */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#12002E', endColorstr='#000000',GradientType=1 ); /* ie6-9 */
+    }
+.shadow{
+  -webkit-box-shadow: 1px 0px 20px 0px rgba(26,12,47,1);
+  -moz-box-shadow: 1px 0px 20px 0px rgba(26,12,47,1);
+  box-shadow: 1px 0px 20px 0px rgba(26,12,47,1);
+}
+  	#mc_embed_signup{ clear:left; font:14px 'Trirong', Helvetica,Arial,sans-serif; width:100%;}
+	/* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
+	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+</style>
+  <body style="margin:0px;">
     <div id="react"></div>
   </body>
+
+  <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+<!--End mc_embed_signup-->
 </html>
