--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,13 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>ASMR.SH</title>
+    <title>ASMR.SH Daily - Autonomous sensory meridian response</title>
+    <meta property="og:url"  content="http://asmr.sh" />
+    <meta property="og:type" content="site" />
+    <meta property="og:title" content="ASMR Daily: Autonomous sensory meridian response" />
+    <meta property="og:description" content="ASMR Daily - one pick per day" />
+    <meta property="og:image" content="https://c1.staticflickr.com/6/5053/5399450126_7dcbb62276_b.jpg" />
+<meta name="google-site-verification" content="2dQb5ToOcs0ku1uTNBGQKSI7lOTnlpuETLo11ex7AKQ" />
   </head>
 <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css"  rel="stylesheet" type="text/css">
 <link href="https://fonts.googleapis.com/css?family=Euphoria+Script|Taviraj|Trirong" rel="stylesheet">
@@ -33,4 +39,14 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#12002E', end
 
   <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
 <!--End mc_embed_signup-->
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-104985707-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 </html>
