--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="shortcut icon" href="http://d1ujqdpfgkvqfi.cloudfront.net/favicon-generator/htdocs/favicons/2014-12-29/a4e656d88046659257f495646f0b796d.ico" type="image/x-icon">
+    <link rel="icon" href="http://d1ujqdpfgkvqfi.cloudfront.net/favicon-generator/htdocs/favicons/2014-12-29/a4e656d88046659257f495646f0b796d.ico" type="image/x-icon">
     <meta charset="utf-8">
     <title>ASMR.SH Daily - Autonomous sensory meridian response</title>
     <meta property="og:url"  content="http://asmr.sh" />
