--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,11 @@
     <link rel="shortcut icon" href="http://d1ujqdpfgkvqfi.cloudfront.net/favicon-generator/htdocs/favicons/2014-12-29/a4e656d88046659257f495646f0b796d.ico" type="image/x-icon">
     <link rel="icon" href="http://d1ujqdpfgkvqfi.cloudfront.net/favicon-generator/htdocs/favicons/2014-12-29/a4e656d88046659257f495646f0b796d.ico" type="image/x-icon">
     <meta charset="utf-8">
-    <title>ASMR.SH Daily - Autonomous sensory meridian response</title>
+    <title>ASMR.SH 🎙 one track that feels good every day 👂🏽</title>
     <meta property="og:url"  content="http://asmr.sh" />
     <meta property="og:type" content="site" />
-    <meta property="og:title" content="ASMR Daily: Autonomous sensory meridian response" />
-    <meta property="og:description" content="ASMR Daily - one pick per day" />
+    <meta property="og:title" content="ASMR.SH 🎙 one track that feels good every day 👂" />
+    <meta property="og:description" content="ASMR Daily – be sure to subscribe for the weekly playlist (Autonomous sensory meridian response)" />
     <meta property="og:image" content="https://c1.staticflickr.com/6/5053/5399450126_7dcbb62276_b.jpg" />
 <meta name="google-site-verification" content="2dQb5ToOcs0ku1uTNBGQKSI7lOTnlpuETLo11ex7AKQ" />
   </head>
