--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
 
 <link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
 <style type="text/css">
-.container{
+body{
   background: -moz-radial-gradient(center, ellipse cover, rgba(35,9,74,1) 0%, rgba(0,0,0,1) 100%); /* ff3.6+ */
 background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%, rgba(35,9,74,1)), color-stop(100%, rgba(0,0,0,1))); /* safari4+,chrome */
 background:-webkit-radial-gradient(center, ellipse cover, rgba(35,9,74,1) 0%, rgba(0,0,0,1) 100%); /* safari5.1+,chrome10+ */
